tests/testcases/net2/errors/BCE0004-1.boo
"""
BCE0004-1.boo(7,6): BCE0004: Ambiguous reference 'List': Boo.Lang.List[of int], System.Collections.Generic.List[of int].
"""
import Boo.Lang
import System.Collections.Generic

l as List of int
